# GameAISDK

./: .gitignore  OLD_README.md  README.md  testt.py
Modules/darknetV3/: InstallYoloV3.sh  Makefile_GPU
Modules/darknetV3/include/: darknet.h
Modules/darknetV3/src/: Makefile
Modules/darknetV3/src/build_cuda_sucess/: DarknetConfigVersion.cmake  uselib  uselib_track
Modules/darknetV3/src/src/: classifier.c  coco.c  compare.c  darknet.c  data.c  detector.c  matrix.c  parser.c  rnn.c  utils.c  yolo.c
Modules/tbus/pytbus/linux-cp3/tbus.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
cfg/platform/: GameReg.ini  IO.ini  UI.ini
doc/YOLO/: TrainDetModel.md
src/AIClient/: demo.py
src/AIClient/WrappedDeviceAPI/: WrappedDeviceAPI.py  __init__.py  deviceAdapter.py  wrappedDevice_config.py
src/AIClient/WrappedDeviceAPI/deviceAPI/: __init__.py  iDevice.py
src/AIClient/WrappedDeviceAPI/deviceAPI/mobileDevice/: __init__.py  iMobileDeviceAPI.py
src/AIClient/WrappedDeviceAPI/deviceAPI/pcDevice/: __init__.py  iPcDeviceAPI.py
src/AIClient/aiclient/: __init__.py  py_logger.py  start_service.py
src/AIClient/aiclient/aiclientapi/: __init__.py  args_helps.py  network_client.py
src/AIClient/aiclient/aiclientapi/communication/: __init__.py  client_communication.py  instance_factory.py  zmq_client_communication.py
src/AIClient/aiclient/aiclientapi/demop/: __init__.py  action_process.py
src/AIClient/aiclient/aiclientapi/performance_profile/: __init__.py  action_check.py  speed_check.py
src/AIClient/aiclient/aiclientapi/resource_apply/: __init__.py  resource_apply.py
src/AIClient/aiclient/aiclientapi/tool_manage/: __init__.py  communicate_config.py  parameter_context.py
src/AIClient/aiclient/cfg/: resource_result.json
src/AIClient/aiclient/cfg/device_cfg/: device.ini
src/AIClient/aiclient/device_remote_interaction/: __init__.py
src/AIClient/aiclient/device_remote_interaction/action_handlers/: __init__.py  action_handler_interface.py  android_action_handler.py  ios_action_handler.py  windows_action_handler.py
src/AIClient/aiclient/device_remote_interaction/action_threads/: __init__.py  action_execute_thread.py  action_recv_thread.py
src/AIClient/aiclient/device_remote_interaction/common/: __init__.py  action_check.py  action_queue.py  define.py  network_check.py
src/AIClient/aiclient/device_remote_interaction/device_interface/: __init__.py  config.py  device_api.py  ui_device.py
src/AIClient/aiclient/plugin/: __init__.py
src/AIClient/aiclient/plugin/state_notify/: __init__.py  state_notify.py
src/AIClient/aiclient/register_obj/: __init__.py  state_notify.py
src/AIClient/aiclient/tools/: __init__.py  action_network_verify_thread.py  network_verify.py
src/AIClient/tools/: __init__.py  resource_apply.py
src/API/AgentAPI/: AgentAPIMgr.py
src/AgentAI/actionmanager/: ActionOpenAIController.py
src/AgentAI/agentenv/: DQNEnv.py  GameEnv.py  OpenAIEnv.py
src/AgentAI/aiframework/: AIFrameWork.py  AIModelParameter.py  AIPlugin.py
src/AgentAI/aimodel/ImitationLearning/: GenerateImageSamples.py  MainImitationLearning.py  Network.py  resnet_delare.py
src/AgentAI/aimodel/dqn/: DQNAIModel.py  QNetwork.py
src/AgentAI/aimodel/openai/: PPO.py  atari_wrappers.py  retro_wrappers.py
src/AgentAI/protocol/: common_pb2.py
src/AgentAI/util/: config_path_mgr.py  util.py
src/IOService/pyIOService/: IOService.py
src/IOService/pyIOService/common/: CommonContext.py
src/IOService/pyIOService/communicate/: HTTPClient.py  SocketThread.py  ZMQSocket.py
src/IOService/pyIOService/msghandler/: MsgHandler.py
src/IOService/pyIOService/util/: config_path_mgr.py
src/ImgProc/: CMakeLists.txt  Makefile  Makefile.in  config.status  configure
src/ImgProc/Comm/ImgReg/ImgProcess/: CYOLOAPI.cpp  CYOLOAPI.h  ImgComn.cpp  ImgComn.h
src/ImgProc/Comm/ImgReg/Recognizer/: CDeformObjReg.cpp  CFixObjReg.cpp  CKingGloryBloodReg.cpp  CMultColorVarReg.cpp
src/ImgProc/Comm/Os/Linux/: TqcLinuxOS.cpp
src/ImgProc/Comm/Os/Windows/: TqcWindowsOS.cpp
src/ImgProc/Comm/Utils/: IniConfig.cpp  JsonConfig.cpp  Log.cpp  Pool.cpp  TSingleton.h  TqcCommon.cpp  TqcLog.h  TqcMemoryPool.cpp  TqcMemoryPool.h  TqcString.cpp  TqcThreadPool.cpp  TqcThreadPool.h
src/ImgProc/GameRecognize/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in
src/ImgProc/GameRecognize/src/: FrameWorkDefine.h  GameRegFrameWork.cpp  NetWorkManager.cpp  NetWorkManager.h  SerializeProtobuf.cpp  main.cpp
src/ImgProc/GameRecognize/src/TaskMgr/: TaskContext.cpp  TaskDataDeal.cpp  TaskDefine.h  TaskManager.cpp  TaskMessage.cpp  TaskMultiResMgr.cpp  TaskResult.cpp
src/ImgProc/UI/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in
src/ImgProc/UI/Src/: Main.cpp  UIDefine.h  UIFrameWork.cpp
src/ImgProc/UI/Src/Action/: Action.cpp  Action.h
src/ImgProc/UI/Src/Communicate/: DataManager.cpp  PBMsgManager.cpp
src/ImgProc/UI/Src/UICfg/: CommUICfg.cpp  GameOverCfg.cpp  GameStartCfg.cpp  HallCfg.cpp  POPUICfg.cpp
src/ImgProc/UI/Src/UIReg/: CommonUIReg.cpp
src/ImgProc/autom4te.cache/: output.0  requests  traces.0  traces.1
src/ManageCenter/: manage_center.py
src/ManageCenter/pyManageCenter/gamemanager/: ResultManager.py
src/ManageCenter/pyManageCenter/msghandler/: MsgHandler.py
src/ManageCenter/pyManageCenter/protocol/: common_pb2.py
tools/AIClient/aiclient/cfg/resource_apply_cfg/: game.ini
tools/SDKTool/: main.py
tools/SDKTool/Resource/cfg/: element_template.json  record_cfg.json
tools/SDKTool/cfg/: SDKTool.ini
tools/SDKTool/project/LQ/: TTKP.prj
tools/SDKTool/project/TTKP/: TTKP.prj
tools/SDKTool/src/WrappedDeviceAPI/: APIDefine.py  WrappedDeviceAPI.py
tools/SDKTool/src/common/: define.py
tools/SDKTool/src/communicate/: agent_msg_mgr.py
tools/SDKTool/src/config_manager/ai/: ai_algorithm.py  ai_manager.py
tools/SDKTool/src/project/: project_manager.py
tools/SDKTool/src/subprocess_service/: subprocess_service_manager.py
tools/SDKTool/src/ui/canvas/: dev_toolbar.py
tools/SDKTool/src/ui/tree/: project_data_manager.py  project_node.py
tools/SDKTool/src/ui/tree/ai_tree/: ai_tree.py  (+5 more)
(+113 files in other folders)
